# Archer

./: .cursorrules  .env  .gitignore  ACCEPTANCE_CRITERIA_VERIFICATION.md  ACCEPTANCE_CRITERIA_VERIFIED.md  ACTIVITY_DRIVEN_INTEGRATION_PROGRESS.md  ACTIVITY_DRIVEN_MIGRATION_COMPLETE.md  ACTIVITY_DRIVEN_MIGRATION_PLAN.md  ACTIVITY_WIZARD_COMPLETE.md  ACTIVITY_WIZARD_DROPDOWN_MIGRATION_SUMMARY.md  ACTIVITY_WIZARD_INTEGRATION_PLAN.md  ACTIVITY_WIZARD_MODAL_CONVERSION_PLAN.md  ACTIVITY_WIZARD_TESTING_CHECKLIST.md  AI_SCHEMA_IMPLEMENTATION_SUMMARY.md  ANALYTICS_DROPDOWN_MIGRATION_TEST_GUIDE.md  API_ENDPOINTS_IMPLEMENTATION_COMPLETE.md  AUTHSERVICE_FIX_SUMMARY.md  AUTONOMOUS_WORK_SESSION_SUMMARY.md  Archer.code-workspace  BACKEND_SERVICES_IMPLEMENTATION_SUMMARY.md  BUTTON_STYLING_GUIDE.md  CARD_HEADER_STANDARDIZATION_PLAN.md  CLAUDE.md  CLUSTER_STRATEGY_DROPDOWNS_IMPLEMENTATION.md  CLUSTER_STRATEGY_UX_REVIEW.md  CMDB_TESTING_GUIDE.md  COMMIT-NOW.bat  COMPILATION_FIX_COMPLETE_SUMMARY.md  COMPILATION_FIX_SUMMARY.md  COMPILATION_STATUS_REPORT.md  COMPONENT_LIBRARY_GUIDE.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  COMPREHENSIVE_TESTING_FRAMEWORK.md  COMPREHENSIVE_TESTING_PLAN_V2.md  CONTEXT_SENSITIVE_VALIDATION_AUDIT.md  COPILOT_PROGRESS_REPORT.md  Cargo.toml  DELEGATION_COMPLETE_SUMMARY.md  DELL_TABLE_IMPROVEMENTS.md  DEPENDENCIES.md  (+305 more)
archer-ai-engine/: .env.example  .gitignore  ACCEPTANCE_CRITERIA_VERIFICATION.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLE.md  README.md  VERIFICATION.md  docker-compose.yml  manual_test.py  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.sh  test_schema.py
archer-ai-engine/src/: __init__.py  config.py  main.py
archer-ai-engine/src/agents/: __init__.py  base.py  orchestrator.py
archer-ai-engine/src/api/: __init__.py  dependencies.py  main.py
archer-ai-engine/src/config/: __init__.py  settings.py
archer-ai-engine/src/context/: __init__.py
archer-ai-engine/src/core/: __init__.py  exceptions.py  logging.py
archer-ai-engine/src/db/: __init__.py  surrealdb_client.py
archer-ai-engine/src/llm_gateway/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  ollama_adapter.py  openai_adapter.py  router.py  types.py
archer-ai-engine/src/ocr/: __init__.py
archer-ai-engine/src/utils/: __init__.py  logging.py
archer-ai-engine/tests/: __init__.py  conftest.py  test_chat.py  test_health.py  test_llm_gateway.py  test_settings.py
archer-ai-engine/tests/test_llm_gateway/: __init__.py  test_anthropic.py  test_ollama.py  test_openai.py  test_router.py
backend/: Cargo.toml  README.md  backend.err  database_schema_hld.surql  test-analytics-endpoint.sh  test_integration.ps1
backend/schema/: 00_core.surql  01_nutanix.surql  02_cisco.surql  03_security.surql  04_f5.surql  05_monitoring.surql  06_identity_apps.surql  07_backup_kvm.surql  08_ai_schema.surql
backend/src/: api.rs  comprehensive_hardware_api.rs  database.rs  hardware_basket_api.rs  lib.rs  main.rs  migration_api.rs  migration_models.rs  models.rs  parser.rs
backend/src/api/: agent_actions.rs  ai_audit.rs  analytics.rs  analytics_axum.rs  assets.rs  auth.rs  capacity.rs  chunks.rs  cluster_strategy.rs  cmdb.rs  destination_clusters.rs  documents.rs  enhanced_rvtools.rs  hardware_baskets.rs  hardware_pool.rs  hld.rs  hld.rs.backup  hld_old.rs  integration.rs  knowledge.rs  knowledge_base.rs  migration.rs  migration_wizard.rs  mod.rs  monitoring.rs  network_templates.rs  project_lifecycle.rs  project_management.rs  project_workflow.rs  reporting.rs  rvtools.rs  service_catalog.rs  settings.rs  sla.rs  teams.rs  ticket_relationships.rs  tickets.rs  tiering.rs  vm_placement.rs  wizard.rs  (+1 more)
backend/src/database/: ai_tables_migration.rs  migrations.rs
backend/src/middleware/: auth.rs  error_handling.rs  mod.rs  rate_limiting.rs  rbac.rs  security_headers.rs  validation.rs
backend/src/models/: agent_action.rs  agent_role.rs  ai_thought_log.rs  auth.rs  cmdb.rs  document.rs  hardware_basket.rs  hld.rs  knowledge.rs  knowledge_base.rs  migration_models.rs  migration_wizard_models.rs  mod.rs  monitoring.rs  project_models.rs  reporting.rs  service_catalog.rs  settings.rs  settings_models.rs  team.rs  ticket.rs  workflow.rs  workflow_engine.rs
backend/src/services/: analytics_service.rs  auth_service.rs  capacity_planner_service.rs  capacity_validation_service.rs  cmdb_service.rs  dependency_validator.rs  document_service.rs  enhanced_rvtools_service.rs  hardware_compatibility_service.rs  hardware_pool_service.rs  hld_generation_service.rs  kb_suggestion_service.rs  knowledge_service.rs  migration_wizard_service.rs  mod.rs  monitoring_service.rs  network_template_service.rs  project_management_service.rs  report_export_service.rs  reporting_service.rs  rvtools_hld_mapper.rs  rvtools_hld_mapper_backup.rs  rvtools_service.rs  sla_service.rs  team_service.rs  ticket_service.rs  tiering_service.rs  timeline_estimation_service.rs  variable_definitions.rs  variable_validator.rs  vm_placement_service.rs  wizard_service.rs  word_generator.rs  workflow_engine_service.rs
backend/src/utils/: api_response.rs  error_handling.rs  mod.rs
backend/tests/: TEST_IMPLEMENTATION_NOTES.md  auth_tests.rs  cmdb_tests.rs  enhanced_rvtools_e2e_tests.rs  enhanced_rvtools_integration_tests.rs  enhanced_rvtools_parsing_tests.rs  enhanced_rvtools_performance_tests.rs  enhanced_rvtools_validation_tests.rs  knowledge_tests.rs  monitoring_tests.rs  permission_tests.rs  service_catalog_tests.rs  test_ai_schema.rs
backend/tests/e2e/: auth_tests.rs  mod.rs  role_deserialization_test.rs
backend/tests/unit/: api_tests.rs  test_helpers.rs
core-engine/: Cargo.toml
core-engine/src/: analysis.rs  document_generation.rs  error.rs  forecasting.rs  hardware_basket_parser.rs  lib.rs  models.rs  parser.rs  project_manager.rs  sizing.rs  translation.rs
core-engine/src/hardware_parser/: mod.rs  (+7 more)
core-engine/tests/: spec_parser_tests.rs
src-tauri/: Cargo.toml
src-tauri/src/: commands.rs  commands_minimal.rs  main.rs  main_old.rs  state.rs
(+971 files in other folders)
