[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart", "http1"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tower = { version = "0.4", features = ["util"] }
surrealdb = { version = "1.0.0-beta.9", features = ["kv-mem"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0.75"
thiserror = "1.0.69"
calamine = "0.22.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tempfile = "3.8.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
hyper = { version = "0.14", features = ["server"] }
core-engine = { path = "../core-engine" }
regex = "1"
docx-rs = "0.4"
md5 = "0.7"
once_cell = "1.19.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
async-trait = "0.1.89"
rand = "0.8"
# Auth/RBAC dependencies (Phase 0)
argon2 = "0.5"
jsonwebtoken = "9"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
axum-test = "14.0.0"
http-body-util = "0.1.0"
bytes = "1.6.0"
serial_test = "3.0.0"

[features]
test-utils = []

# E2E test configuration
[[test]]
name = "e2e_auth"
path = "tests/e2e/auth_tests.rs"
harness = true
