[package]
name = "core-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
calamine = "0.22"
docx-rs = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"

# For time series forecasting
linfa = "0.7"
linfa-linear = "0.7"

# For statistical analysis
statrs = "0.16"

[dev-dependencies]
tokio-test = "0.4"
