[package]
name = "core-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
calamine = "0.22"
docx-rs = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
quick-xml = { workspace = true }

# For vendor API integration and caching
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs"] }
serde_yaml = "0.9"
base64 = "0.21"
async-trait = "0.1"
dirs = "5.0"

# For time series forecasting
linfa = "0.7"
linfa-linear = "0.7"

# For statistical analysis
statrs = "0.16"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "rvtools_cli"
path = "src/bin/rvtools_cli.rs"
